unpackaged/main/default/objects/litify_pm__LitifyDoc__c/litify_pm__LitifyDoc__c.object-meta.xml
<CustomObject>
    <label>Litify Doc</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litify Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>