unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>