unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__FetchOnPath__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__FetchOnPath__c</fullName>
    <description>This field should be the path where this LitifyDoc should be fetched. ie. &quot;/some dir&quot;</description>
    <label>Fetch On Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>