unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__FileExtension__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__FileExtension__c</fullName>
    <label>File Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>