unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__PathPrefix__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__PathPrefix__c</fullName>
    <description>Used for Document initDir method to allow for quick lookup if existing and to prevent SOQL from exceeding 50K governor limits</description>
    <inlineHelpText>Used for Document initDir method to allow for quick lookup if existing and to prevent SOQL from exceeding 50K governor limits</inlineHelpText>
    <label>Path Prefix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>