unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__ProviderPath__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__ProviderPath__c</fullName>
    <label>ProviderPath</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>