unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__RelatedTo__c</fullName>
    <label>RelatedTo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>