unpackaged/main/default/objects/litify_pm__LitifyDoc__c/fields/litify_pm__Tags__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>